--- a/index.html
+++ b/index.html
@@ -9,17 +9,39 @@
 </head>
 <body>
     <header>
-
+        <div class="logo">
+            <img src="img/googleloghi61.jpg" alt="">
+        </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="#">Contatti</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Chi siamo</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
         <div class="container">
-            
+
+            <div class="row">
+                <div class="column">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim eos mollitia at laudantium corrupti ducimus, expedita delectus recusandae animi officia pariatur accusantium autem ab aut sapiente non velit saepe adipisci.</div>
+                <div class="column">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum quidem eaque laudantium doloremque consequuntur maiores quam beatae aspernatur exercitationem, tenetur nisi nostrum sit commodi itaque perspiciatis mollitia tempore eos eligendi?</div>
+                <div class="column">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum quidem eaque laudantium doloremque consequuntur maiores quam beatae aspernatur exercitationem, tenetur nisi nostrum sit commodi itaque perspiciatis mollitia tempore eos eligendi?</div>
+            </div>
+
+            <div class="row">
+                <div class="column">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum quidem eaque laudantium doloremque consequuntur maiores quam beatae aspernatur exercitationem, tenetur nisi nostrum sit commodi itaque perspiciatis mollitia tempore eos eligendi?</div>
+                <div class="column">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum quidem eaque laudantium doloremque consequuntur maiores quam beatae aspernatur exercitationem, tenetur nisi nostrum sit commodi itaque perspiciatis mollitia tempore eos eligendi?</div>
+                <div class="column">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum quidem eaque laudantium doloremque consequuntur maiores quam beatae aspernatur exercitationem, tenetur nisi nostrum sit commodi itaque perspiciatis mollitia tempore eos eligendi?</div>
+            </div>
         </div>
+
     </main>
 
     <footer>
-
+        
     </footer>
 </body>
 </html>
