--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <div class="column">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim eos mollitia at laudantium corrupti ducimus, expedita delectus recusandae animi officia pariatur accusantium autem ab aut sapiente non velit saepe adipisci.</div>
                 <div class="column">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum quidem eaque laudantium doloremque consequuntur maiores quam beatae aspernatur exercitationem, tenetur nisi nostrum sit commodi itaque perspiciatis mollitia tempore eos eligendi?</div>
                 <div class="column">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum quidem eaque laudantium doloremque consequuntur maiores quam beatae aspernatur exercitationem, tenetur nisi nostrum sit commodi itaque perspiciatis mollitia tempore eos eligendi?</div>
+                <div class="column">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim eos mollitia at laudantium corrupti ducimus, expedita delectus recusandae animi officia pariatur accusantium autem ab aut sapiente non velit saepe adipisci.</div>
+                <div class="column">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum quidem eaque laudantium doloremque consequuntur maiores quam beatae aspernatur exercitationem, tenetur nisi nostrum sit commodi itaque perspiciatis mollitia tempore eos eligendi?</div>
+                <div class="column">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum quidem eaque laudantium doloremque consequuntur maiores quam beatae aspernatur exercitationem, tenetur nisi nostrum sit commodi itaque perspiciatis mollitia tempore eos eligendi?</div>
             </div>
 
             <div class="row">
