--- a/index.html
+++ b/index.html
@@ -44,7 +44,33 @@
     </main>
 
     <footer>
-        
+        <nav>
+            <ul>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+                <li><a href="#">casa</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
